--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,13 @@ vaadin.launch-browser=true
 vaadin.frontend.hotdeploy=true
 
 vaadin.allowed-packages = com.vaadin,org.vaadin,dev.hilla,sr.we,com.github.appreciated.apexcharts,com.flowingcode,software.xdev.vaadin,com.vaadin.componentfactory
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# MariaDB configuration.
+spring.datasource.url = jdbc:mariadb://localhost:3306/bookstore?allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = root
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.defer-datasource-initialization = true
+spring.sql.init.mode = always
